test/elaboration/bad/coreml_forall.mle
let
(main : int) = let ['a] (id : 'a -> 'a) = ['b] fun (x : 'a) -> x[] in id[int] 42